--- a/JQuery/Translate/package.json
+++ b/JQuery/Translate/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "catharsis": "^0.8.9",
-    "grunt": "^0.4.5",
+    "grunt": ">=1.5.3",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "0.7.1",
